# otus-cpp-basic

02-hello-world/: hello_world.cpp
02-hello-world/homework/: CMakeLists.txt  move_me_out.cpp  move_me_out.h
04-basic-syntax-02/: basic-syntax-02.md
04-basic-syntax-02/homework/: left-rotated-pyramide.cpp  pyramide.cpp
05-such-different-functions/: such-different-functions.md
06-linking/homework/: CMakeLists.txt  game_preferences.h  high_scores.cpp  high_scores.h  main.cpp
10-structs-and-classes/: 10-structs-and-classes.md
10-structs-and-classes/homework/: Ball.cpp  Ball.hpp  Color.hpp  Physics.cpp  Point.hpp  Velocity.hpp  World.cpp  World.hpp
10-structs-and-classes/lesson-examples/: 01_struct.cpp  02_methods.cpp  02_methods.hpp  03_constructor.cpp  04_destructor.cpp  05_static.cpp  05_static.h  CMakeLists.txt
11-oop-abstraction-and-encapsulation/: 11-oop-abstraction-and-encapsulation.md
12-inheritence-and-polymorphism/: 12-inheritence-and-polymorphism.md
12-inheritence-and-polymorphism/homework/: istatistics.h  max.h  mean.h  statistics.cpp  std.h
12-inheritence-and-polymorphism/homework-sources/: max.h  mean.h  min.h  statistics.cpp  std.h
12-inheritence-and-polymorphism/lecture-examples/: CMakeLists.txt  animal.cpp  complex_class_1.cpp  complex_class_2.cpp  complex_class_3.cpp  complex_naive.cpp  complex_struct.cpp  details.cpp  inheritence.cpp  person_example.cpp  pure_virtual_call.cpp  shapes_1.cpp  shapes_virtual.cpp
13-templates/: 13-templates.md
13-templates/lecture-examples/: CMakeLists.txt  lec_11_01_func_max.cpp  lec_11_02_func_max_float.cpp  lec_11_03_func_max_template.cpp  lec_11_07_func_several_args.cpp  lec_11_08_func_generate.cpp  lec_11_09_00_func_cpp_header.h  lec_11_09_01_func_cpp_header.h  lec_11_09_02_func_cpp_source.cpp  lec_11_09_11_func_cpp_header.h  lec_11_09_12_func_cpp_source.cpp  lec_11_09_func_cpp_impl.cpp  lec_11_10_class_template.cpp  lec_11_13_class_full_template_specialization.cpp  lec_11_14_class_template_method.cpp  lec_11_15_class_non_template_template.cpp
13-templates/lecture-sources/: lec_11_04_func_max_specialization.cpp  lec_11_05_func_max_type_greater.cpp  lec_11_06_func_factorial.cpp  lec_11_11_class_template_inherit.cpp  lec_11_12_class_template_specialization.cpp
14-overloading-constructors-destructors-move/: CMakeLists.txt  array.h  list.h  main.cpp  overloading-constructors-destructors-move.md
14-overloading-constructors-destructors-move-hw-containers/: array.h
14-overloading-constructors-destructors-move/homework/: CMakeLists.txt  array.h
15-16-unit-testing/: 15-16-unit-testing.md
15-16-unit-testing/homework/: CMakeLists.txt  list.h  test-array.cpp  test-list.cpp
15-16-unit-testing/homework/.cache/clangd/index/: tests.cpp.A4E673163E138AFF.idx
15-16-unit-testing/lecture-examples/examples/: CMakeLists.txt
15-16-unit-testing/lecture-examples/project_gtest_by_cmake/: CMakeLists.txt
15-16-unit-testing/lecture-examples/project_prebuilt_gtest/: CMakeLists.txt
15-16-unit-testing/lecture-examples/project_with_gtest/: CMakeLists.txt
